--- a/src/pages/unv.astro
+++ b/src/pages/unv.astro
@@ -3,7 +3,7 @@ import MainLayout from "@/layouts/MainLayout.astro";
 import { SITE } from "@data/constants";
 import PrimaryCTA from "@components/ui/buttons/PrimaryCTA.astro";
 
-const pageTitle: string = `unv | ${SITE.title + " - " + "Custom Fabrication & Surveillance Solution Provider In Dubai, United Arab Emirates"}`;
+const pageTitle: string = `unv | ${SITE.title + " - " + "Lovosis technology U.A.E"}`;
 interface Props {
   title: string;
   subTitle?: string;
