--- a/src/components/sections/features/FeaturesGeneral.astro
+++ b/src/components/sections/features/FeaturesGeneral.astro
@@ -1,5 +1,4 @@
 ---
-// Import the necessary dependencies
 import { Image } from "astro:assets";
 import IconBlock from "@components/ui/blocks/IconBlock.astro";
 import Icon from "@components/ui/icons/Icon.astro";
@@ -18,7 +17,7 @@ interface Props {
   src?: any;
   alt?: string;
 }
-// Define props from Astro
+
 const { title, subTitle,} = Astro.props;
 
 
@@ -101,7 +100,7 @@ const { title, subTitle,} = Astro.props;
             <div class="items-left absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 font-poppins text-neutral-100 dark:text-neutral-100 group-hover:translate-y-0">
               <div class="items-left flex flex-col justify-center">
                 <p class="text-[0.9em] font-light">
-                  Dahua delivers advanced surveillance technology, offering high-quality security solutions with innovative features for comprehensive protection and monitoring.
+                  As a leading wholesale dealer of Dahua products, we offer an extensive range of high-quality security and surveillance solutions. 
                 </p>
               </div>
             </div>
@@ -136,7 +135,7 @@ const { title, subTitle,} = Astro.props;
             <div class="items-left absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 font-poppins text-neutral-100 dark:text-neutral-100 group-hover:translate-y-0">
               <div class="items-left flex flex-col justify-center">
                 <p class="text-[0.9em] font-light">
-                  Hikvision provides advanced surveillance technology, offering top-tier security solutions with high-definition cameras and smart analytics for ultimate protection.
+                  As the top wholesale seller of Hikvision products in Dubai, we offer the best prices and a vast selection of surveillance solutions from the world’s leading security cameras. 
                 </p>
               </div>
             </div>
@@ -144,7 +143,76 @@ const { title, subTitle,} = Astro.props;
           <img src="/pictures/Hikvision logo.png" alt="hero-image" class="w-full h-auto bg-cover">
 
         </div>
+        <div class="relative flex h-[10em] w-[17em] md:w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white dark:bg-neutral-600 p-[1.5em] text-lime-300">
+          <div class="group absolute left-1/2 bottom-0 md:top-8 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 dark:bg-blue-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em]">
+            <svg
+              class="h-[1em] w-[1em] duration-300 group-hover:opacity-0"
+              viewBox="0 0 48 48"
+              fill="none"
+              height="28"
+              width="28"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g clip-path="url(#a)">
+                <path
+                  clip-rule="evenodd"
+                  d="M21.6 36h4.8V21.6h-4.8V36ZM24 0C10.8 0 0 10.8 0 24s10.8 24 24 24 24-10.8 24-24S37.2 0 24 0Zm0 43.2C13.44 43.2 4.8 34.56 4.8 24 4.8 13.44 13.44 4.8 24 4.8c10.56 0 19.2 8.64 19.2 19.2 0 10.56-8.64 19.2-19.2 19.2Zm-2.4-26.4h4.8V12h-4.8v4.8Z"
+                  fill-rule="evenodd"
+                  fill="#fff"
+                ></path>
+              </g>
+              <defs>
+                <clipPath id="a">
+                  <path d="M0 0h48v48H0z" fill="#fff"></path>
+                </clipPath>
+              </defs>
+            </svg>
+            <div class="items-left absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 font-poppins text-neutral-100 dark:text-neutral-100 group-hover:translate-y-0">
+              <div class="items-left flex flex-col justify-center">
+                <p class="text-[0.9em] font-light">
+                  As an established dealer in Dubai, we are proud to offer Ewind’s comprehensive range of surveillance solutions. Specializing in innovative, cost-effective security products
+                </p>
+              </div>
+            </div>
+          </div>
+          <img src="/pictures/ewind.png" alt="hero-image" class="w-full h-auto bg-cover">
 
+        </div>
+        <div class="relative flex h-[10em] w-[17em] md:w-[17em] items-center justify-center rounded-[1.5em] border-[1px] border-neutral-700 bg-white dark:bg-neutral-600 p-[1.5em] text-lime-300">
+          <div class="group absolute left-1/2 bottom-0 md:top-8 flex h-[2em] w-[2em] -translate-x-1/2 -translate-y-1/2 items-center justify-center overflow-hidden rounded-[1.5em] border-[1px] bg-teal-600 dark:bg-blue-600 backdrop-blur-[3px] duration-[500ms] hover:h-[10em] hover:w-[14em] hover:rounded-[1.5em]">
+            <svg
+              class="h-[1em] w-[1em] duration-300 group-hover:opacity-0"
+              viewBox="0 0 48 48"
+              fill="none"
+              height="28"
+              width="28"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g clip-path="url(#a)">
+                <path
+                  clip-rule="evenodd"
+                  d="M21.6 36h4.8V21.6h-4.8V36ZM24 0C10.8 0 0 10.8 0 24s10.8 24 24 24 24-10.8 24-24S37.2 0 24 0Zm0 43.2C13.44 43.2 4.8 34.56 4.8 24 4.8 13.44 13.44 4.8 24 4.8c10.56 0 19.2 8.64 19.2 19.2 0 10.56-8.64 19.2-19.2 19.2Zm-2.4-26.4h4.8V12h-4.8v4.8Z"
+                  fill-rule="evenodd"
+                  fill="#fff"
+                ></path>
+              </g>
+              <defs>
+                <clipPath id="a">
+                  <path d="M0 0h48v48H0z" fill="#fff"></path>
+                </clipPath>
+              </defs>
+            </svg>
+            <div class="items-left absolute left-0 top-0 flex h-auto w-full translate-y-[20%] flex-col justify-center p-3 font-poppins text-neutral-100 dark:text-neutral-100 group-hover:translate-y-0">
+              <div class="items-left flex flex-col justify-center">
+                <p class="text-[0.9em] font-light">
+                  We are an authorized distributor of UNV (Uniview), one of the top global manufacturers of video surveillance solutions. As an official distributor, we offer a wide selection of UNV products
+                </p>
+              </div>
+            </div>
+          </div>
+          <img src="/pictures/unvlogo.png" alt="hero-image" class="w-full h-auto bg-cover">
+
+        </div>
 
       </div>
     </div>
