--- a/src/components/sections/landing/ClientsSection.astro
+++ b/src/components/sections/landing/ClientsSection.astro
@@ -1,8 +1,5 @@
 ---
-// Define props from Astro
 const { title, subTitle } = Astro.props;
-
-// Define TypeScript interface for props
 interface Props {
   title: string;
   subTitle?: string;
@@ -44,7 +41,7 @@ interface Props {
 
 
   .slider{
-    width: 100%;
+     width: 100%; 
     height: var(--height);
     overflow: hidden;
     mask-image: linear-gradient(
@@ -122,7 +119,6 @@ interface Props {
 <section
   class="mx-auto max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 2xl:max-w-full"
 >
-  <!-- Title and description -->
   <div class="mx-auto mb-12 w-full space-y-1 text-center sm:w-1/2 lg:w-1/3">
     <h2
       class="text-balance text-2xl font-bold leading-tight text-neutral-800 dark:text-neutral-200 sm:text-3xl fade-in-up-bounce"
@@ -140,10 +136,10 @@ interface Props {
   <div class="flex flex-col items-center justify-center gap-y-2 sm:flex-row sm:gap-x-12 sm:gap-y-0 lg:gap-x-24">
     <div class="slider" style="--width: 100px; --height: 50px; --quantity: 7;">
       <div class="list">
-        <div class="item" style="--position: 1"><img src="pictures/Brand Logo/hikvision.png" alt="client1" class="w-40 h-5"></div>
+        <div class="item" style="--position: 1"><img src="pictures/Brand Logo/hikvision.png" alt="client1" class="h-6"></div>
         <div class="item" style="--position: 2"><img src="pictures/Brand Logo/dahua.png" alt="client1" class="w-40 h-5"></div>
         <div class="item" style="--position: 3"><img src="pictures/Brand Logo/ewind.png" alt="client1" class="w-40 h-5"></div>
-        <div class="item" style="--position: 4"><img src="pictures/Brand Logo/Toshiba.png" alt="client1" class="w-40 h-5"></div>
+        <div class="item" style="--position: 4"><img src="pictures/Brand Logo/toshiba1.png" alt="client1" class="w-40 h-5"></div>
         <div class="item" style="--position: 5"><img src="pictures/Brand Logo/western.png" alt="client1" class="w-40 h-5"></div>
         <div class="item" style="--position: 6"><img src="pictures/Brand Logo/Imou.png" alt="client1" class="w-40 h-5"></div>
         <div class="item" style="--position: 7"><img src="pictures/Brand Logo/UNV.png" alt="client1" class="w-40 h-5"></div>
