--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -1,35 +1,33 @@
 ---
 import { getImage } from "astro:assets";
-import { OG, SEO, SITE } from "@data/constants";
+import { SITE } from "@data/constants";
 import faviconSvgSrc from "@images/icon.svg";
 import faviconSrc from "@images/icon.png";
 
 const defaultProps = {
   meta: SITE.description,
-  structuredData: SEO.structuredData,
-};
+ };
 
 
-// <MainLayout title="Custom Title" meta="Custom description." />
+
 const {
   meta = defaultProps.meta,
-  structuredData = defaultProps.structuredData,
 } = Astro.props;
 
 const URL = `${Astro.site}`;
-const author = SITE.author;
+const author = SITE.openGraph.article.author;
 const canonical = Astro.url.href;
-const ogTitle = OG.title;
-const ogDescription = OG.description;
+const ogTitle = SITE.openGraph.basic.title;
+const ogDescription = SITE.openGraph.optional.description;
 const socialImageRes = await getImage({
-  src: OG.image,
+  src: SITE.image.url,
   width: 1200,
   height: 600,
 });
 const socialImage = Astro.url.origin + socialImageRes.src; 
 const languages: { [key: string]: string } = {
   en: "en",
-  fr: "fr",
+  
 };
 
 function createHref(lang: string, prefix: string, path: string): string {
@@ -66,16 +64,6 @@ const appleTouchIcon = await getImage({
   format: "png",
 });
 ---
-
-{
-  structuredData && (
-    <script
-      type="application/ld+json"
-      set:html={JSON.stringify(structuredData)}
-    />
-  )
-}
-
 <meta charset="utf-8" />
 <meta content={meta} name="description" />
 <meta name="web_author" content={author} />
@@ -87,7 +75,7 @@ const appleTouchIcon = await getImage({
 <meta property="og:url" content={URL} />
 <meta property="og:type" content="website" />
 <meta property="og:title" content={ogTitle} />
-<meta property="og:site_name" content={SITE.title} />
+<meta property="og:site_name" content={SITE.Title} />
 <meta property="og:description" content={ogDescription} />
 <meta property="og:image" content={socialImage} />
 <meta content="1200" property="og:image:width" />
