--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -15,7 +15,7 @@ import LanguagePicker from "@components/ui/LanguagePicker.astro";
 >
   <!-- Navigation container -->
   <nav
-    class="relative mx-2 w-full rounded-[36px] border border-yellow-100/40 bg-yellow-50/60 px-4 py-3 backdrop-blur-md dark:border-neutral-700/40 dark:bg-neutral-800/80 dark:backdrop-blur-md md:flex md:items-center md:justify-between md:px-6 md:py-3 lg:px-8 xl:mx-auto"
+    class="relative mx-2 w-full rounded-[36px] border shadow-2xl border-yellow-100/40 bg-white px-4 py-3 backdrop-blur-md dark:border-neutral-700/40 dark:bg-neutral-800/80 dark:backdrop-blur-md md:flex md:items-center md:justify-between md:px-6 md:py-3 lg:px-8 xl:mx-auto"
     aria-label="Global"
   >
     <div class="flex items-center justify-between">
