--- a/src/components/ui/links/MegaMenuProducts.astro
+++ b/src/components/ui/links/MegaMenuProducts.astro
@@ -43,7 +43,7 @@ import personWorking from "@images/person-working.avif";
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
             href="/hikvision"
             onmouseover="hoverDetails('/pictures/Brand Logo/hikvision.png', 'solution1')">
-            <img src="/pictures/Brand Logo/hikvision.png" alt="Logo" class="h-auto w-full md:h-auto md:w-32" />
+            <img src="/pictures/Brand Logo/logo.png" alt="Logo" class="h-auto w-full md:h-auto md:w-32" />
             <div class="grow">
               <p 
                 class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
@@ -54,7 +54,7 @@ import personWorking from "@images/person-working.avif";
           </a>
 
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="dahua"
+            href="/dahua"
             onmouseover="hoverDetails('/pictures/logo.png', 'solution2')">
             <img src="/pictures/Brand Logo/dahua.png" alt="Logo" class="h-6 w-20 md:auto md:w-32" />
             <div class="grow">
@@ -67,7 +67,7 @@ import personWorking from "@images/person-working.avif";
           </a>
           
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="imou"
+            href="/imou"
             onmouseover="hoverDetails('/pictures/UNV.png', 'solution2')">
             <img src="/pictures/Brand Logo/Imou.png" alt="Logo" class="h-6 w-20 md:auto md:w-32" />
             <div class="grow">
@@ -84,9 +84,9 @@ import personWorking from "@images/person-working.avif";
 
         <div class="flex gap-3">
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="ewind"
+            href="/ewind"
             onmouseover="hoverDetails('/pictures/logo.png', 'solution2')">
-            <img src="/pictures/Brand Logo/ewind.png" alt="Logo" class="h-6 w-20 md:auto md:w-32" />
+            <img src="/pictures/Brand Logo/ewind1.png" alt="Logo" class="h-6 w-20 md:auto md:w-32" />
             <div class="grow">
               <p 
                 class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
@@ -98,7 +98,7 @@ import personWorking from "@images/person-working.avif";
 
           <a
             class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="westerdigital"
+            href="/westerdigital"
             onmouseover="hoverDetails('/pictures/p1.png', 'solution1')">
             <img src="/pictures/Brand Logo/western.png" alt="Logo" class="h-6 w-20 md:auto md:w-32" />
             <div class="grow">
@@ -111,9 +111,9 @@ import personWorking from "@images/person-working.avif";
           </a>
 
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="toshiba"
+            href="/toshiba"
             onmouseover="hoverDetails('/pictures/logo.png', 'solution2')">
-            <img src="/pictures/Brand Logo/Toshiba.png" alt="Logo" class="h-6 w-20 md:auto md:w-28" />
+            <img src="/pictures/Brand Logo/toshiba1.png" alt="Logo" class="h-6 w-20 md:auto md:w-28" />
             <div class="grow">
               <p 
                 class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
@@ -128,9 +128,9 @@ import personWorking from "@images/person-working.avif";
         <div class="flex gap-3">
 
           <a class="group gap-x-5 rounded-lg p-4 border border-blue-600 hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10"
-            href="unv"
+            href="/unv"
             onmouseover="hoverDetails('/pictures/logo.png', 'solution2')">
-            <img src="/pictures/Brand Logo/UNV.png" alt="Logo" class="h-6 w-20 md:auto md:w-[7.5rem]" />
+            <img src="/pictures/Brand Logo/unv1.png" alt="Logo" class="h-6 w-20 md:auto md:w-[7.5rem]" />
             <div class="grow">
               <p 
                 class="mt-3 inline-flex items-center gap-x-1 text-sm font-medium text-blue-600 decoration-2 hover:underline dark:text-teal-600">
