--- a/src/pages/about/[...slug].astro
+++ b/src/pages/about/[...slug].astro
@@ -1,5 +1,4 @@
 ---
-// Import section components
 import MainLayout from "@/layouts/MainLayout.astro";
 import ProductTabBtn from "@components/ui/buttons/ProductTabBtn.astro";
 import PrimaryCTA from "@components/ui/buttons/PrimaryCTA.astro";
@@ -19,7 +18,7 @@ export async function getStaticPaths() {
   }));
 }
 const { product } = Astro.props;
-const pageTitle: string = `${product.data.title} | ${SITE.title}`;
+const pageTitle: string = `${product.data.title} | ${SITE.Title}`;
 ---
 
 <MainLayout
@@ -54,14 +53,7 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
         </p>
       </div>
       <div>
-        <Image
-          id="fadeInMoveRight"
-          src={product.data.main.imgMain}
-          class="w-[600px]"
-          alt={product.data.main.imgAlt}
-          format={"avif"}
-          loading={"eager"}
-        />
+       
       </div>
     </div>
   </section>
@@ -214,29 +206,11 @@ const pageTitle: string = `${product.data.title} | ${SITE.title}`;
       <div
         class="relative left-12 top-12 z-10 overflow-hidden rounded-xl shadow-lg md:left-12 md:top-16 md:-ml-12 lg:ml-0"
       >
-        {
-          product.data.blueprints.first && (
-            <Image
-              src={product.data.blueprints.first}
-              class="h-full w-full object-cover object-center"
-              alt="Blueprint Illustration"
-              format={"avif"}
-            />
-          )
-        }
+       
       </div>
 
       <div class="relative right-12 overflow-hidden rounded-xl shadow-xl">
-        {
-          product.data.blueprints.second && (
-            <Image
-              src={product.data.blueprints.second}
-              class="h-full w-full object-cover object-center"
-              alt="Blueprint Illustration"
-              format={"avif"}
-            />
-          )
-        }
+       
       </div>
     </div>
   </div>
