--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -3,7 +3,7 @@ import MainLayout from "@/layouts/MainLayout.astro";
 import { SITE } from "@data/constants";
 import lovosis from '../../assets/img/lovosis.jpg';
 
-const pageTitle: string = `About | ${SITE.title + " - " + ", United Arab Emirates"}`;
+const pageTitle: string = `About | ${SITE.Title + " - " + ", United Arab Emirates"}`;
 const NAME = "Lovosis Technology L.L.C U.A.E";
 const IMAGE = lovosis;
 
@@ -38,6 +38,92 @@ interface Props {
   AboutprimaryBtnURL?: string;
 }
 const ListItemMarker: string = `<svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="mt-0.5 h-6 w-6 text-blue-600 dark:text-teal-600 flex-none"><path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/></svg>`;
+const structuredData={
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://lovosis.com/#organization",
+        name: NAME,
+        url: SITE.baseURL,
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://lovosis.com/#website",
+        url:SITE.baseURL ,
+        name: NAME,
+        publisher: { "@id": "https://lovosis.com/#organization" },
+        inLanguage: "en-US",
+      },
+      {
+        "@type": "ImageObject",
+        "@id": IMAGE,
+        url: IMAGE,
+        width: "200",
+        height: "200",
+        inLanguage: "en-US",
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://lovosis.com/#breadcrumb",
+        itemListElement: [
+          {
+            "@type": "ListItem",
+            position: 1,
+            item: { "@id": SITE.baseURL, name: "Home" },
+          },
+          {
+            "@type": "ListItem",
+            position: 2,
+            item: { "@id": SITE.baseURL, name: "About" },
+          },
+        ],
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://lovosis.com/#webpage",
+        url: URL,
+        name: NAME,
+        datePublished: "2025-02-05T11:26:39+00:00",
+        dateModified: "2025-12-12T19:17:19+00:00",
+        about: { "@id": "https://lovosis.com/#organization" },
+        isPartOf: { "@id": "https://lovosis.com/#website" },
+        primaryImageOfPage: { "@id": IMAGE },
+        inLanguage: "en-US",
+      },
+      {
+        "@type": "Person",
+        "@id": URL,
+        name: "Lovosis",
+        url: URL,
+        image: {
+          "@type": "ImageObject",
+          "@id": URL,
+          url: URL,
+          caption: NAME,
+          inLanguage: "en-US",
+        },
+        sameAs: [URL],
+        worksFor: { "@id": "https://lovosis.com/#organization" },
+      },
+      {
+        "@type": "Article",
+        headline: title,
+        keywords: "",
+        datePublished: "2024-02-05T11:26:39+00:00",
+        dateModified: "2025-12-12T19:17:19+00:00",
+        author: { "@id": URL, name: "Johns Abraham" },
+        publisher: { "@id": "https://lovosis.com/#organization" },
+        description: "",
+        name: NAME,
+        "@id": "https://totaleng.in/#richSnippet",
+        isPartOf: { "@id": "https://lovosis.com/#webpage" },
+        image: { "@id": IMAGE },
+        inLanguage: "en-US",
+        mainEntityOfPage: { "@id": "https://lovosis.com=/#webpage" },
+      },
+    ],
+  };
 ---
 
 <style>
@@ -89,93 +175,8 @@ const ListItemMarker: string = `<svg fill="none" viewBox="0 0 24 24" stroke-widt
 
 
 <MainLayout
-  title={pageTitle}
-  structuredData={{
-    "@context": "https://schema.org",
-    "@graph": [
-      {
-        "@type": "Organization",
-        "@id": "https://lovosis.com/#organization",
-        name: NAME,
-        url: SITE.url,
-      },
-      {
-        "@type": "WebSite",
-        "@id": "https://lovosis.com/#website",
-        url:SITE.url ,
-        name: NAME,
-        publisher: { "@id": "https://lovosis.com/#organization" },
-        inLanguage: "en-US",
-      },
-      {
-        "@type": "ImageObject",
-        "@id": IMAGE,
-        url: IMAGE,
-        width: "200",
-        height: "200",
-        inLanguage: "en-US",
-      },
-      {
-        "@type": "BreadcrumbList",
-        "@id": "https://lovosis.com/#breadcrumb",
-        itemListElement: [
-          {
-            "@type": "ListItem",
-            position: 1,
-            item: { "@id": SITE.url, name: "Home" },
-          },
-          {
-            "@type": "ListItem",
-            position: 2,
-            item: { "@id": SITE.url, name: "About" },
-          },
-        ],
-      },
-      {
-        "@type": "WebPage",
-        "@id": "https://lovosis.com/#webpage",
-        url: URL,
-        name: NAME,
-        datePublished: "2025-02-05T11:26:39+00:00",
-        dateModified: "2025-12-12T19:17:19+00:00",
-        about: { "@id": "https://lovosis.com/#organization" },
-        isPartOf: { "@id": "https://lovosis.com/#website" },
-        primaryImageOfPage: { "@id": IMAGE },
-        inLanguage: "en-US",
-      },
-      {
-        "@type": "Person",
-        "@id": URL,
-        name: "Lovosis",
-        url: URL,
-        image: {
-          "@type": "ImageObject",
-          "@id": URL,
-          url: URL,
-          caption: NAME,
-          inLanguage: "en-US",
-        },
-        sameAs: [URL],
-        worksFor: { "@id": "https://lovosis.com/#organization" },
-      },
-      {
-        "@type": "Article",
-        headline: title,
-        keywords: "",
-        datePublished: "2024-02-05T11:26:39+00:00",
-        dateModified: "2025-12-12T19:17:19+00:00",
-        author: { "@id": URL, name: "Johns Abraham" },
-        publisher: { "@id": "https://lovosis.com/#organization" },
-        description: "",
-        name: NAME,
-        "@id": "https://totaleng.in/#richSnippet",
-        isPartOf: { "@id": "https://lovosis.com/#webpage" },
-        image: { "@id": IMAGE },
-        inLanguage: "en-US",
-        mainEntityOfPage: { "@id": "https://lovosis.com=/#webpage" },
-      },
-    ],
-  }};
+  title={pageTitle} sd={structuredData}
+ 
 >
 
 
