--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -84,6 +84,9 @@ import LanguagePicker from "@components/ui/LanguagePicker.astro";
           <a href="/" class="text-gray-600 font-semibold hover:text-orange-800 dark:text-gray-300 dark:hover:text-blue-600">
             Home
           </a>
+          <a href="/intersec" class="text-gray-600 font-semibold hover:text-orange-800 dark:text-gray-300 dark:hover:text-blue-600">
+            Intersec2025
+          </a>
           <MegaMenuProducts />
           
           <MegaMenuLink />
