--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,14 +92,14 @@ const structuredData={
     {
       "@type": "Article",
       headline:pageTitle,
-      keywords: "",
+      keywords: "UNV distributor | Hikvision Dealer | Dahua wholesale distributor",
       datePublished: "2024-02-05T11:26:39+00:00",
       dateModified: "2025-12-12T19:17:19+00:00",
-      author: { "@id": URL, name: "Johns Abraham" },
+      author: { "@id": URL, name: "Gafoor T.C" },
       publisher: { "@id": "https://lovosis.com/#organization" },
-      description: "",
+      description: "Looking for wholesale prices on UNV, Hikvision, or Dahua security products? We offer top-rated surveillance equipment for businesses and resellers",
       name: NAME,
-      "@id": "https://totaleng.in/#richSnippet",
+      "@id": "https://lovosis.com/#richSnippet",
       isPartOf: { "@id": "https://lovosis.com/#webpage" },
       image: { "@id": IMAGE },
       inLanguage: "en-US",
