--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,7 @@ const avatarSrcs: Array<string> = [
   "https://images.unsplash.com/photo-1492562080023-ab3db95bfbce?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=facearea&facepad=2&w=300&h=300&q=80",
 ];
 const NAME = "Lovosis Technology L.L.C U.A.E";
+const URL = "https://lovosis.com"
 const IMAGE = lovosis;
 const structuredData={
   "@context": "https://schema.org",
@@ -103,7 +104,7 @@ const structuredData={
       isPartOf: { "@id": "https://lovosis.com/#webpage" },
       image: { "@id": IMAGE },
       inLanguage: "en-US",
-      mainEntityOfPage: { "@id": "https://lovosis.com=/#webpage" },
+      mainEntityOfPage: { "@id": "https://lovosis.com/#webpage" },
     },
   ],
 };
