--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const avatarSrcs: Array<string> = [
 ];
 const NAME = "Lovosis Technology L.L.C U.A.E";
 const URL = "https://lovosis.com"
-const IMAGE = lovosis;
+const IMAGE = "https://lovosis.com/pictures/lovosis.jpg";
 const structuredData={
   "@context": "https://schema.org",
   "@graph": [
