--- a/src/pages/intersec.astro
+++ b/src/pages/intersec.astro
@@ -28,9 +28,7 @@ const structuredData={
       "addressCountry": "AE"
     }
   },
-  "image": [
-   {socialimage}
-  ],
+  "image": "https://lovosis.com/images/social.webp",
   "organizer": {
     "@type": "Organization",
     "name": "Intersec Organizers",
@@ -67,7 +65,7 @@ const structuredData={
       "description": "This video provides an overview of the Intersec 2025 event, showcasing highlights and what attendees can expect from the world's leading trade fair for security, safety, and fire protection.",
       "thumbnailUrl": "https://lovosis.com/pictures/gitex234.png",  
       "contentUrl": "https://www.youtube.com/embed/MeB5Xgx8YNA?si=Qi4WuwGoDpBFUBqC",  
-      "uploadDate": "2024-12-24",
+      "uploadDate": "2024-12-24T00:00:00+00:00",
       "duration": "PT0M25S", 
       "publisher": {
         "@type": "Organization",
